--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,12 +1,1 @@
-html, body {
-  background-color: #ffeed8;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
-
-}
-
+@import "tailwindcss";
